--- a/index_assets/style.css
+++ b/index_assets/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #333 url(back.png);
+  background: #333 url(/index_assets/back.png);
   overflow: hidden;
 }
 
@@ -21,17 +21,17 @@ body {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 #logo {
   -webkit-animation: fadeInDown 2s both;
-          animation: fadeInDown 2s both;
+  animation: fadeInDown 2s both;
 }
 
 #space {
@@ -44,43 +44,45 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 #links > a {
   -webkit-animation: fadeIn 2s both;
-          animation: fadeIn 2s both;
+  animation: fadeIn 2s both;
   -webkit-transition: -webkit-transform 0.3s ease-out;
-          transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
 }
 #links > a:nth-child(1) {
   -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
+  animation-delay: 0.4s;
 }
 #links > a:nth-child(2) {
   -webkit-animation-delay: 0.8s;
-          animation-delay: 0.8s;
+  animation-delay: 0.8s;
 }
 #links > a:nth-child(3) {
   -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
+  animation-delay: 1.2s;
 }
 #links > a > img {
   width: 40px;
   -webkit-transition: -webkit-transform 1s;
-          transition: transform 1s;
+  transition: transform 1s;
 }
-#links > a > img[src$='in.png'] {
+#links > a > img[src$="in.png"] {
   margin-right: -3px;
 }
-#links > a:hover, #links > a:focus, #links > a:active {
+#links > a:hover,
+#links > a:focus,
+#links > a:active {
   -webkit-transform: translateY(-20%);
-      -ms-transform: translateY(-20%);
-          transform: translateY(-20%);
+  -ms-transform: translateY(-20%);
+  transform: translateY(-20%);
 }
 
 @-webkit-keyframes fadeIn {
@@ -104,23 +106,23 @@ body {
   from {
     opacity: 0;
     -webkit-transform: translateY(-100%);
-            transform: translateY(-100%);
+    transform: translateY(-100%);
   }
   to {
     opacity: 1;
     -webkit-transform: none;
-            transform: none;
+    transform: none;
   }
 }
 @keyframes fadeInDown {
   from {
     opacity: 0;
     -webkit-transform: translateY(-100%);
-            transform: translateY(-100%);
+    transform: translateY(-100%);
   }
   to {
     opacity: 1;
     -webkit-transform: none;
-            transform: none;
+    transform: none;
   }
 }
